fix: OPDS breadcrumb always visible (PR #686 Fixes #615)

--- a/src/renderer/assets/styles/opds.css
+++ b/src/renderer/assets/styles/opds.css
@@ -125,3 +125,19 @@
     padding: 30px 60px;
     margin-bottom: 20px;
 }
+
+.opdsBrowse {
+    overflow-y: hidden;
+    padding: 0;
+    width: auto;
+    display: flex;
+    flex-direction: column;
+
+    & .opdsBrowseBreadcrumb {
+        padding: 30px 60px;
+    }
+    & .opdsBrowseContent {
+        padding: 0 60px;
+        overflow-y: auto;
+    }
+}
